--- a/commons.css
+++ b/commons.css
@@ -1,223 +1,5 @@
-/***** Nodes ***********/
+/* ------------ Nodes ----------- */
 
-#block-custom-barrio-theme-page-title {
-  display: none;
-}
+/* ------------ Action Btns ----------- */
 
-#block-custom-barrio-theme-content header {
-  padding: 0;
-}
-
-/******************* Action Btns **************/
-.action_btn {
-  display: block;
-  text-align: center;
-  color: var(--white);
-  width: 100%;
-  /* max-width: 300px; */
-  padding: 12px;
-  border-radius: 5px;
-  font-family: var(--font-openSans-med);
-  transition: all 0.2s ease-in-out;
-}
-
-.blue_btn {
-  background-color: var(--color-accent1);
-}
-
-.blue_btn:hover {
-  background-color: #004990 !important;
-  color: var(--white);
-}
-
-.white_btn {
-  background-color: var(--white);
-  color: var(--text-color) !important;
-  width: 95% !important;
-  margin: 1rem auto 0.5rem;
-}
-
-.white_btn:hover {
-  background-color: #dddddd;
-  color: var(--white);
-}
-
-.social_icons {
-  text-align: center;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.social_icons a {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-  background-color: var(--white);
-  color: var(--link-color) !important;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.2s ease-in-out;
-}
-
-.social_icons a:hover {
-  color: var(--white) !important;
-  background-color: var(--color-primary);
-}
-
-#block-social-contactbar .social_icons a {
-  color: var(--color-primary) !important;
-}
-
-#block-social-contactbar .social_icons a:hover {
-  color: var(--white) !important;
-  background-color: var(--color-accent1);
-}
-
-.social_icons a .fab {
-  font-size: 1.1rem;
-}
-
-/************** Meet team *****************/
-#block-views-block-meet-the-team-block-1,
-#block-views-block-meet-the-team-block-1 .view-meet-the-team {
-  height: auto;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-#block-views-block-meet-the-team-block-1 .view-meet-the-team .view-header {
-  height: 370px;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-
-  position: relative;
-
-  background-image: url("../images/mtt-bg.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-header
-  #team_header {
-  height: 80%;
-  width: 90%;
-  max-width: 1024px;
-  margin: 0 auto;
-  padding: 2rem 0.5rem 1rem;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  background-color: var(--white);
-  background-image: url("../images/mtt-text-block-bg.png");
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: auto 208px;
-  border-radius: 5px;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-header
-  #team_header
-  h2 {
-  font-size: 24px;
-  margin: 0 0 40px;
-  line-height: 30px;
-  font-family: var(--font-openSans-semiBold);
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-header
-  #team_header
-  p {
-  display: block;
-  margin: 0 auto;
-  max-width: 500px;
-  text-align: center;
-  font-size: 1rem;
-}
-
-#block-views-block-meet-the-team-block-1 .view-meet-the-team .view-content {
-  height: auto;
-  width: 100%;
-  max-width: var(--max-width);
-  margin: 2rem auto;
-  padding: var(--px);
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  gap: 1rem;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row {
-  margin-bottom: 35px;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row
-  .views-field-nothing {
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row
-  .views-field-nothing
-  img {
-  border-radius: 5px;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row
-  .views-field-nothing
-  h3 {
-  font-size: 20px;
-  padding-top: 25px;
-  line-height: 30px;
-  margin: 0;
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row
-  .views-field-nothing
-  h5 {
-  font-size: 1rem;
-  font-family: var(--font-openSans-reg);
-  margin-bottom: 1.25rem;
-  color: var(--text-color-darker);
-}
-
-#block-views-block-meet-the-team-block-1
-  .view-meet-the-team
-  .view-content
-  .views-row
-  .views-field-nothing
-  p {
-  font-size: 1rem;
-  font-family: var(--font-openSans-reg);
-  color: var(--text-color-darker);
-}
+/* ------------ Light Gallery ----------- */
