--- a/commons.css
+++ b/commons.css
@@ -1,5 +1,7 @@
 /* ------------ Nodes ----------- */
 
+/* ------------ Blocks ----------- */
+
 /* ------------ Action Btns ----------- */
 
 /* ------------ Light Gallery ----------- */
