--- a/colors.css
+++ b/colors.css
@@ -8,6 +8,8 @@
   --color-accent2: #2349c2;
   --white: #fff;
   --labels-color1: #0079c2;
+  --header-color: #484847;
+  --sub-header-color: #484847;
   --text-color: #484847;
   --text-color-darker: #222;
   --link-color: #484847;
