--- a/mobile.css
+++ b/mobile.css
@@ -273,30 +273,25 @@ input::-ms-input-placeholder {
 }
 
 /* -------- Header ----------- */
-}
 
 /* ------------ Navigation ----------- */
 
-
 /* ------------ Front Page ----------- */
-
 
 /* ------------ Hero ----------- */
 
-
 /* ------------ Featured Bottom ----------- */
 
+/* ------------ Teasers ----------- */
+
+/* ------------ Details ----------- */
 
 /* ------------ Services ----------- */
 
-
 /* ------------ ABout Us ----------- */
-
 
 /* ------------Contact Us ----------- */
 
-
 /* ------------ Webform confirmation ----------- */
-
 
 /* ------------ Footer ----------- */
